--- a/qml.qrc
+++ b/qml.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Page1.qml</file>
-        <file>Page1Form.ui.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>MainMenu.qml</file>
+        <file>MainHeader.qml</file>
+        <file>Settings.qml</file>
     </qresource>
 </RCC>
